--- a/Light.html
+++ b/Light.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://cdn.jsdelivr.net/npm/three@0.133.2/build/three.min.js"></script>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
     <title>Wishful thinking</title>
 </head>
 <body id="page2">
@@ -18,7 +18,12 @@
     <br>
     <p>What's on your mind today?</p>
     <br>
-    <button id="q1" onclick="burn()">    Burn  </button>
-        <p id="demo"></p>
+    <button id="q1" onclick="one()">  Am I on the right path ?   </button> 
+    <br>
+    <br>
+    <button id="q2" onclick="two()">  Can this predict the future ?  </button>
+    <br>
+    <br>
+    <button id="q3" onclick="three()"> Should I make a big change in my life or stay where I am ?</button>
 </body>
 </html>
