--- a/Light.html
+++ b/Light.html
@@ -14,6 +14,7 @@
     <p>Forming shapes and patterns all around,</p>
     <p>I see the future in the flame,</p>
     <p>As I perform this ancient divination spell.</p>
+    <p>Imagine a world where ceromancy resulted in only unexpected and silly realities.</p>
 
     <br>
     <p>What's on your mind today?</p>
