--- a/result_two.html
+++ b/result_two.html
@@ -7,15 +7,23 @@
     <script src="script.js"></script>
     <title>Wishful thinking</title>
 </head>
-<body id="page1">
+<body id="page4">
+    <button id="backbtn" onclick="back()">    Back  </button>
+    <p id="demo"></p>
     <h1>Can this predict the future?</h1>
-    <p>For in the flicker of the flame</p>
-    <p>Lies a message that's never the same</p>
-    <p>Light the flame to find out</p>
-    <p>What's it going to be this time</p>
+    <br>
+    <p>The candle burns down, revealing secrets,</p>
+    <p>Whispers of what's yet to come, </p>
+    <p>We use our intuition to interpret,</p>
+    <p>And see that the future has begun.</p>
 
-
-<img id="drag1" src="./assets/images/match.png" draggable="true" ondragstart="drag(event)" width="20%" href="Light.html">
+<br>
+    <p>A mystery wrapped in an enigma.</p>
+    <p>An enigma that's never truly solved.</p>
+    <p>An enigma that's always at the back of your mind.</p>
+<br>
+    <p>So when you ask me if this can tell the future</p>
+    <p>I say, that's a riddle constantly evolving.</p>
 
 </body>
 </html>
