--- a/result_one.html
+++ b/result_one.html
@@ -4,26 +4,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="script_one.js"></script>
+    <script src="script.js"></script>
     <title>Wishful thinking</title>
 </head>
-<body id="page1">
-    <button id="burnbtn" onclick="burn()">    Burn  </button>
-    <p id="demo"></p>
+<body id="page3">
     <h1>Am I on the right path?</h1>
-    <p>Are you ready</p>
-    <P>to play with the fire</P>
-    <P>to read the light?</P>
-    <p>Would you find the answers</p>
-    <p>in the flicker of the flame?</p>
-    <br>
-    <p>For in the flicker of the flame</p>
-    <p>Lies a message that's never the same</p>
-    <p>Light the flame to find out</p>
-    <p>What's it going to be this time</p>
-
-
-<img id="drag1" src="./assets/images/match.png" draggable="true" ondragstart="drag(event)" width="20%" href="Light.html">
+    <p>To the precision of this time</p>
+    <button id="t" onclick="giveTime()">  Right now  </button>
+    <p id="demo"></p>
+    <button id="t" onclick="giveProb()">  Right now  </button>
+    <p id="demo"></p>
+    <p>Where are you going from here?</p>
+    <button id="backbtn" onclick="back()"> Back  </button>
+    <p id="demo"></p>
 
 </body>
 </html>
