--- a/result_one.html
+++ b/result_one.html
@@ -12,7 +12,7 @@
     <p>To the precision of this time</p>
     <button id="t" onclick="giveTime()">  Right now  </button>
     <p id="demo"></p>
-    <button id="t" onclick="giveProb()">  Right now  </button>
+    <button id="t" onclick="giveProb()">  Chances </button>
     <p id="demo"></p>
     <p>Where are you going from here?</p>
     <button id="backbtn" onclick="back()"> Back  </button>
